ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/IndexMemberDeclarations/parserIndexMemberDeclaration9/input.ts.stderr
error: Unexpected token `[`. Expected * for generator, private key, identifier or async
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/IndexMemberDeclarations/parserIndexMemberDeclaration9/input.ts:2:11
  |
2 |    export [x: string]: string;
  |           ^

